--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.5",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
@@ -22,9 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "proxy": "http://localhost:5000",
-
   "eslintConfig": {
     "extends": [
       "react-app",
